--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ h2 {
 }
 
 main section img {
-  width: 40rem;
+  width: 100%;
 }
 
 main section {
@@ -47,31 +47,74 @@ div {
   margin: 10px;
 }
 
+p {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;;
+}
+
 article {
   flex: 1;
   padding: 15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  flex-flow: column row;
 
 }
+
+#large {
+  width: 1000px;
+  height: 460px;
+}
+
+#largeImg {
+  height: 400px;
+}
+
 
 .card {
   border-style: solid;
   border-width: 1px;
   padding: 10px;
-  flex: 0 0 20px;
   box-shadow: 10px 10px 5px grey;
   display: inline;
-  margin: 10px;
+  margin: 50px;
+  width: 500px;
+  height: 290px;
   
 }
 
-article img {
-  width: 30rem;
+.card:hover {
+  background-color: rgb(179, 215, 215);
+  color:black
+}
+
+#card:hover {
+  background-color: rgb(179, 215, 215);
+  color:black
 }
 
 a:hover {
   background-color: black;
   color: white;
 }
+
+/* @media screen and (max-width: 900px) {
+  .card {
+    width:50%;
+  }
+  .card img {
+    width:50%;
+  }
+  
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width:100%;
+  }
+  .card img {
+    width: 100%;
+  }
+  
+} */
